--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2696,37 +2696,37 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #9068be; /*#3490dc*/
-  border-color: #9068be; /*#3490dc*/
+  background-color: #3490dc;
+  border-color: #3490dc;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #AA82D8;/*#227dc7*/
-  border-color: #9068be;
+  background-color: #227dc7;
+  border-color: #2176bd;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #C39BF1;/*#227dc7*/
-  border-color: #9068be;
+  background-color: #227dc7;
+  border-color: #2176bd;
   box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #9068be; /*#3490dc*/
-  border-color: #9068be; /*#3490dc*/
+  background-color: #3490dc;
+  border-color: #3490dc;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #C39BF1;/*2176bd*/
-  border-color: #9068be;
+  background-color: #2176bd;
+  border-color: #1f6fb2;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
